--- a/JavaScript/imooc/变量类型和计算.md
+++ b/JavaScript/imooc/变量类型和计算.md
@@ -46,3 +46,13 @@
   console.log(`typeof map ? ${typeof map}`); // object
   ```
 > 注意值类型和基本(primitive)数据类型范围不一样
+
+# 变量计算-类型转换
+## 字符串拼接
+```javascript
+const a = 100 + 10 //110(number)
+const b = 100 + '10' //10010(string)
+const c = true + '10' //true10(string)
+```
+## ==
+## if语句和逻辑计算
