--- a/JavaScript/imooc/作用域和闭包.md
+++ b/JavaScript/imooc/作用域和闭包.md
@@ -1,5 +1,37 @@
-## this的不同应用场景，如何取值？
+## ⭐️ this的不同应用场景，如何取值？
+
+## 手写apply函数
 
 ## 手写bind函数
 
 ## 实际开发中闭包的应用场景，举例说明
+**隐藏数据**
+见catch-demo
+
+## 创建10个`<a>`标签，点击的时候弹出对应的序号
+`createTextNode` vs. `innerHTML`
+参考：[Is there any major difference between innerHTML and using createTextNode to fill a span?](https://stackoverflow.com/questions/13122760/is-there-any-major-difference-between-innerhtml-and-using-createtextnode-to-fill)
+
+## 作用域
+### 全局作用域
+### 函数作用域
+### 块级作用域（ES6)
+
+## 自有变量
+- 一个变量在当前作用域没有定义，但被使用了
+- 向上级作用域，一层一层依次寻找，直至找到为止
+- 如果到全局作用域都没有找到，则报错**xx is not defined**
+
+## 闭包
+闭包是作用域应用的特殊情况，有两种表现：
+- 函数作为参数被传递
+- 函数作为返回值被返回
+**闭包：所有的自有变量的查找，是在函数定义的地方，向上级作用域查找。不是在函数执行的地方！**
+
+## this有几种赋值情况
+- 作为普通函数
+- 使用call apply bind
+- 作为对象方法被调用
+- 在class方法中调用
+- 箭头函数
+⭐️ `this`实际上是在函数被**调用**时发生的绑定，它指向什么完全取决于函数在哪里被**调用**
