--- a/JavaScript/imooc/变量类型和计算.md
+++ b/JavaScript/imooc/变量类型和计算.md
@@ -34,6 +34,7 @@
   ```
 - 识别函数
   ```javascript
+  // 识别函数
   console.log(`typeof console.log ? ${typeof console.log}`); // function
   console.log(`typeof function () {} ? ${typeof function () {}}`); // function
   ```
@@ -45,7 +46,6 @@
   const map = new Map()
   console.log(`typeof map ? ${typeof map}`); // object
   ```
-> 注意值类型和基本(primitive)数据类型范围不一样
 
 # 变量计算-类型转换
 ## 字符串拼接
@@ -56,3 +56,8 @@ const c = true + '10' //true10(string)
 ```
 ## ==
 ## if语句和逻辑计算
+经过两步非运算
+- truly 变量：`!!a === true`的变量
+- falsely 变量：`!!a === false`的变量
+if语句判断的就是truly变量和falsely变量
+逻辑判断也是用truly变量和falsely变量
