--- a/JavaScript/imooc/变量类型和计算.md
+++ b/JavaScript/imooc/变量类型和计算.md
@@ -61,3 +61,43 @@ const c = true + '10' //true10(string)
 - falsely 变量：`!!a === false`的变量
 if语句判断的就是truly变量和falsely变量
 逻辑判断也是用truly变量和falsely变量
+
+## 值类型和引用类型区别
+### 值类型
+```javascript
+const a // undefined
+const s = 'abc' //string
+const n = 100 //number
+const b = true //boolean
+const s = Symbol('s')//symbol
+```
+![值类型](./img/值类型.png)
+```javascript
+// 值类型
+let a = 100
+let b = a
+a = 200
+console.log(b);
+```
+### 引用类型
+```javascript
+const obj = { x: 100 }
+const arr = ['a', 'b', 'c']
+const n = null // 特殊引用类型，指针指向为空地址
+function fn() {
+  // 特殊引用类型，但不用于存储数据，所以没有”拷贝、复制函数“一说
+}
+```
+![引用类型存储](./img/引用类型存储.png)
+```javascript
+// 引用类型
+let a = { age: 20 }
+let b = a //赋值的是内存地址
+b.age = 21
+console.log(a.age);
+```
+## 手写深拷贝
+为什么要深拷贝
+## 赋值，浅拷贝与深拷贝
+```javascript
+```
