--- a/JavaScript/imooc/真题模拟.md
+++ b/JavaScript/imooc/真题模拟.md
@@ -1,1 +1,16 @@
 ## var和let const的区别
+
+
+## 手写flatern考虑多层级
+
+## Map 和 Set
+### 有序和无序
+在js中，object是无序的，数组是有序的
+- 有序：操作慢
+- 无序：操作快，但无序
+- 如何结合两者优点？——二叉树及其变种
+
+### Map 和 Object区别
+- API不同，Map可以以任意类型为key
+- Map是有序结构（重要）
+- Map操作同样很快
