--- a/imooc真题模拟/真题模拟.md
+++ b/imooc真题模拟/真题模拟.md
@@ -1,3 +1,43 @@
 ## var和let const 的区别
 ## typeof返回哪些类型
 ## 列举强制类型转换和隐式类型转换
+## 函数call和apply的区别
+## 事件代理（委托）是什么？
+## 闭包是什么，什么特性？有什么负面影响？
+- 回顾作用域和自由变量
+- 回顾闭包应用场景：函数作为参数被传入，函数作为返回值被返回
+- 回顾自由变量的查找，要在函数定义的地方（而非执行的地方）
+- 影响：变量会常驻内存，得不到释放。闭包不要乱用。
+
+## 如何阻止事件冒泡和默认行为？
+- `event.stopPropagation()`
+- `event.preventDefault()`
+## 查找、添加、删除、移动DOM节点的方法？
+## 如何减少DOM操作？
+- 缓存DOM查询结果
+- 多次DOM操作，合并到一次插入
+## 如何捕获JS程序中的异常？
+- 手动捕获异常
+```javascript
+try {
+  // todo
+} catch (ex) {
+  console.error(ex) // 手动捕获 catch
+} finally {
+  // todo
+}
+```
+- 自动捕获异常
+```javascript
+window.onerror = function (message, source, lineNum, colNum, error) {
+  // 第一，对跨域的 js ，如CDN的， 不会有详细的报错信息
+  // 第二，对于压缩的 js ， 还要配合 sourceMap 反查到未压缩代码的行、列
+}
+```
+## 什么是JSON？
+- JSON 是一种数据格式，本质是一段字符串
+- JSON 格式和 JS 对象结构一致，对JS语言更友好
+- window.JSON 是一个全局对象：
+  - `JSON.stringify()`方法将一个JavaScript对象或值转换为JSON字符串。
+  - `JSON.parse()`方法用来解析JSON字符串，构造由字符串描述的JavaScript值或对象。
+## 获取当前页面url参数
